# intel_image-cl

./: LICENSE  README.md  main.py  pyproject.toml
intel_image_cl/: data.py  infer.py  train.py
